[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/Popochiu/Editor/Importers/Aseprite/docks/AnimationPlayerInspectorDock.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxFlat" id=4]

[node name="sprite_inspector_dock" type="PanelContainer"]
margin_right = 14.0
margin_bottom = 14.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="margin" type="MarginContainer" parent="."]
margin_right = 212.0
margin_bottom = 286.0
custom_constants/margin_top = 2
custom_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="margin"]
margin_top = 2.0
margin_right = 212.0
margin_bottom = 284.0

[node name="SectionTitle" type="PanelContainer" parent="margin/VBoxContainer"]
margin_right = 212.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="margin/VBoxContainer/SectionTitle"]
margin_right = 212.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Aseprite"
align = 1

[node name="Source" type="HBoxContainer" parent="margin/VBoxContainer"]
margin_top = 18.0
margin_right = 212.0
margin_bottom = 38.0
hint_tooltip = "Location of the Aseprite (*.ase, *.aseprite)  source file."

[node name="Label" type="Label" parent="margin/VBoxContainer/Source"]
margin_top = 3.0
margin_right = 81.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Aseprite File"

[node name="SourceButton" type="Button" parent="margin/VBoxContainer/Source"]
margin_left = 85.0
margin_right = 151.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "[empty]"
clip_text = true

[node name="RescanButton" type="Button" parent="margin/VBoxContainer/Source"]
margin_left = 155.0
margin_right = 212.0
margin_bottom = 20.0
text = "Rescan"

[node name="TagsTitleBar" type="PanelContainer" parent="margin/VBoxContainer"]
margin_top = 42.0
margin_right = 212.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TagsTitle" type="ToolButton" parent="margin/VBoxContainer/TagsTitleBar"]
margin_right = 212.0
margin_bottom = 22.0
custom_colors/font_color_pressed = Color( 0.8, 0.807843, 0.827451, 1 )
toggle_mode = true
text = "Animation tags"
align = 0

[node name="Tags" type="VBoxContainer" parent="margin/VBoxContainer"]
margin_top = 68.0
margin_right = 212.0
margin_bottom = 68.0

[node name="OptionsTitleBar" type="PanelContainer" parent="margin/VBoxContainer"]
margin_top = 72.0
margin_right = 212.0
margin_bottom = 94.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsTitle" type="ToolButton" parent="margin/VBoxContainer/OptionsTitleBar"]
margin_right = 212.0
margin_bottom = 22.0
custom_colors/font_color_pressed = Color( 0.8, 0.807843, 0.827451, 1 )
toggle_mode = true
text = "Options"
align = 0

[node name="Options" type="VBoxContainer" parent="margin/VBoxContainer"]
margin_top = 98.0
margin_right = 212.0
margin_bottom = 234.0

[node name="OutFolder" type="HBoxContainer" parent="margin/VBoxContainer/Options"]
margin_right = 212.0
margin_bottom = 20.0
hint_tooltip = "Location where the spritesheet file should be saved."

[node name="Label" type="Label" parent="margin/VBoxContainer/Options/OutFolder"]
margin_top = 3.0
margin_right = 104.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Output folder"

[node name="OutFolderButton" type="Button" parent="margin/VBoxContainer/Options/OutFolder"]
margin_left = 108.0
margin_right = 212.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "[empty]"
clip_text = true

[node name="OutFile" type="HBoxContainer" parent="margin/VBoxContainer/Options"]
margin_top = 24.0
margin_right = 212.0
margin_bottom = 48.0
hint_tooltip = "Base filename for spritesheet. In case the layer option is used, this works as a prefix to the layer name."

[node name="Label" type="Label" parent="margin/VBoxContainer/Options/OutFile"]
margin_top = 5.0
margin_right = 109.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Output file name"

[node name="OutFileName" type="LineEdit" parent="margin/VBoxContainer/Options/OutFile"]
margin_left = 113.0
margin_right = 212.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="VisibleLayers" type="HBoxContainer" parent="margin/VBoxContainer/Options"]
margin_top = 52.0
margin_right = 212.0
margin_bottom = 92.0
hint_tooltip = "If active, layers not visible in the source file won't be included in the final image."

[node name="Label" type="Label" parent="margin/VBoxContainer/Options/VisibleLayers"]
margin_top = 13.0
margin_right = 118.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Only visible layers"

[node name="VisibleLayersCheckButton" type="CheckButton" parent="margin/VBoxContainer/Options/VisibleLayers"]
margin_left = 122.0
margin_right = 212.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="WipeOldAnimations" type="HBoxContainer" parent="margin/VBoxContainer/Options"]
margin_top = 96.0
margin_right = 212.0
margin_bottom = 136.0
hint_tooltip = "If active, layers not visible in the source file won't be included in the final image."

[node name="Label" type="Label" parent="margin/VBoxContainer/Options/WipeOldAnimations"]
margin_top = 13.0
margin_right = 132.0
margin_bottom = 27.0
hint_tooltip = "Set this to OFF if you want to add new animations on top of old ones. Anims with same name will be updated."
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Wipe old animations"

[node name="WipeOldAnimationsCheckButton" type="CheckButton" parent="margin/VBoxContainer/Options/WipeOldAnimations"]
margin_left = 136.0
margin_right = 212.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Import" type="Button" parent="margin/VBoxContainer"]
margin_top = 238.0
margin_right = 212.0
margin_bottom = 258.0
text = "Import"

[node name="Reset" type="Button" parent="margin/VBoxContainer"]
margin_top = 262.0
margin_right = 212.0
margin_bottom = 282.0
text = "Reset Preferences"
flat = true

[connection signal="pressed" from="margin/VBoxContainer/Source/SourceButton" to="." method="_on_source_pressed"]
[connection signal="pressed" from="margin/VBoxContainer/Source/RescanButton" to="." method="_on_rescan_pressed"]
[connection signal="toggled" from="margin/VBoxContainer/TagsTitleBar/TagsTitle" to="." method="_on_options_title_toggled"]
[connection signal="toggled" from="margin/VBoxContainer/OptionsTitleBar/OptionsTitle" to="." method="_on_options_title_toggled"]
[connection signal="pressed" from="margin/VBoxContainer/Options/OutFolder/OutFolderButton" to="." method="_on_out_folder_pressed"]
[connection signal="focus_exited" from="margin/VBoxContainer/Options/OutFile/OutFileName" to="." method="_save_config"]
[connection signal="pressed" from="margin/VBoxContainer/Options/VisibleLayers/VisibleLayersCheckButton" to="." method="_save_config"]
[connection signal="pressed" from="margin/VBoxContainer/Options/WipeOldAnimations/WipeOldAnimationsCheckButton" to="." method="_save_config"]
[connection signal="pressed" from="margin/VBoxContainer/Import" to="." method="_on_import_pressed"]
[connection signal="pressed" from="margin/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
